<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|top"
                android:background="#b6584d"
                android:id="@+id/header">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:layout_gravity="center_vertical|bottom"
                    android:layout_marginBottom="10dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder"
                        android:id="@+id/reminder"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#ffffff" android:textSize="30dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="#fff"
                android:layout_alignLeft="@+id/header"
                android:layout_below="@+id/header"
                android:layout_above="@+id/footer"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgMe"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lukasz_olszewski"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent" android:layout_gravity="center_vertical|left|right"
                    android:id="@+id/wrapper" android:padding="10dp">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/headerVatId">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/companyHeader"
                            android:id="@+id/companyData" android:layout_gravity="left|center_vertical"
                            android:textSize="20sp"/>
                    <View
                            android:layout_width="fill_parent"
                            android:layout_height="0.2dp"
                            android:visibility="visible"
                            android:background="#b6584d"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/wrapperVatId"
                        android:padding="10dp">
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" android:layout_gravity="center_horizontal|left"
                            android:id="@+id/vatidSection">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vatId"
                                android:id="@+id/vatid" android:layout_gravity="left|center_vertical"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vatIdValue"
                                android:id="@+id/vatIdValue" android:layout_gravity="center"
                                android:layout_marginLeft="10dp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
                        android:id="@+id/headerAddress">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/addressHeader"
                            android:id="@+id/addressData" android:textSize="20sp"/>
                    <View
                            android:layout_width="fill_parent"
                            android:layout_height="0.2dp"
                            android:visibility="visible"
                            android:background="#b6584d"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
                        android:id="@+id/wrapperAddress" android:padding="10dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/companyNameValue"
                            android:id="@+id/companyName"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address1"
                            android:id="@+id/address1"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address2"
                            android:id="@+id/address2"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
                        android:id="@+id/bankHeader">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bankTransferHeader"
                            android:id="@+id/bankTransferHeader" android:textSize="20sp"/>
                    <View
                            android:layout_width="fill_parent"
                            android:layout_height="0.2dp"
                            android:visibility="visible"
                            android:background="#b6584d"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
                        android:id="@+id/wrapperBank" android:padding="10dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bankName"
                            android:id="@+id/bankName"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bankAccountNumber"
                            android:id="@+id/bankAccountNumber"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" android:layout_gravity="left|center_vertical"
                        android:id="@+id/submit" android:padding="10px">
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:layout_gravity="center">
                        <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sendByEmail"
                                android:id="@+id/sendByEmail" android:layout_gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/footer"
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:background="#b6584d"
                android:layout_alignLeft="@+id/header"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">
        </LinearLayout>

</RelativeLayout>